<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:tabTextColor="@android:color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/generalTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general" />


        <com.google.android.material.tabs.TabItem
            android:id="@+id/windTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/nextDaysTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextDays" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewPager">

    </androidx.viewpager.widget.ViewPager>


</LinearLayout>