<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/weatherPanel"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/wind" />


        </LinearLayout>


        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:orientation="horizontal">





        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1
"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/speedText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"

                android:textAlignment="center"
                android:gravity="center"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/directoryText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="50sp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cloudTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/cloud"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="39sp" />

            <TextView
                android:id="@+id/cloudText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="40sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/humidityText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="40sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/visibilityTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/visibility"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/visibilityText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="40sp" />

        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/loading"
        android:indeterminate="true"
        android:layout_centerInParent="true"/>


</RelativeLayout>
